test/files/neg/macro-deprecate-idents.check
macro-deprecate-idents.scala:4: error: macro is now a reserved word; usage as an identifier is disallowed
  val macro = ???
      ^
macro-deprecate-idents.scala:8: error: macro is now a reserved word; usage as an identifier is disallowed
  var macro = ???
      ^
macro-deprecate-idents.scala:12: error: macro is now a reserved word; usage as an identifier is disallowed
  type macro = Int
       ^
macro-deprecate-idents.scala:16: error: macro is now a reserved word; usage as an identifier is disallowed
  class macro
        ^
macro-deprecate-idents.scala:20: error: macro is now a reserved word; usage as an identifier is disallowed
  class macro
        ^
macro-deprecate-idents.scala:24: error: macro is now a reserved word; usage as an identifier is disallowed
  object macro
         ^
macro-deprecate-idents.scala:28: error: macro is now a reserved word; usage as an identifier is disallowed
  object macro
         ^
macro-deprecate-idents.scala:32: error: macro is now a reserved word; usage as an identifier is disallowed
  trait macro
        ^
macro-deprecate-idents.scala:36: error: macro is now a reserved word; usage as an identifier is disallowed
  trait macro
        ^
macro-deprecate-idents.scala:39: error: macro is now a reserved word; usage as an identifier is disallowed
package macro {
        ^
macro-deprecate-idents.scala:40: error: macro is now a reserved word; usage as an identifier is disallowed
  package macro.bar {
          ^
macro-deprecate-idents.scala:45: error: macro is now a reserved word; usage as an identifier is disallowed
  package macro.foo {
          ^
macro-deprecate-idents.scala:50: error: macro is now a reserved word; usage as an identifier is disallowed
  val Some(macro) = Some(42)
           ^
macro-deprecate-idents.scala:51: error: macro is now a reserved word; usage as an identifier is disallowed
  macro match {
  ^
macro-deprecate-idents.scala:52: error: macro is now a reserved word; usage as an identifier is disallowed
    case macro => println(macro)
         ^
macro-deprecate-idents.scala:52: error: macro is now a reserved word; usage as an identifier is disallowed
    case macro => println(macro)
                          ^
macro-deprecate-idents.scala:57: error: macro is now a reserved word; usage as an identifier is disallowed
  def macro = 2
      ^
macro-deprecate-idents.scala:57: warning: procedure syntax is deprecated: instead, add `: Unit` to explicitly declare `<error>`'s return type
  def macro = 2
               ^
macro-deprecate-idents.scala:5: error: '=' expected but '}' found.
}
^
macro-deprecate-idents.scala:9: error: '=' expected but '}' found.
}
^
macro-deprecate-idents.scala:44: error: '{' expected.
package foo {
^
macro-deprecate-idents.scala:47: error: '{' expected but '}' found.
}
^
macro-deprecate-idents.scala:54: error: ')' expected but '}' found.
}
^
one warning found
22 errors found
